k8s/apps/reactive-resume/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactive-resume
  namespace: reactive-resume
spec:
  type: ClusterIP
  selector:
    app: reactive-resume
  ports:
  - name: http
    port: 3000
    targetPort: 3000
